# SaneSDD

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/sdd-design/: SKILL.md
.claude/skills/sdd-feature/: SKILL.md
.claude/skills/sdd-implement/: SKILL.md
.claude/skills/sdd-implement/reference/: implementation-loop.md  role-profiles.md
.claude/skills/sdd-init/: SKILL.md
.claude/skills/sdd-plan/: SKILL.md
.claude/skills/sdd-stories/: SKILL.md
.claude/skills/sdd-tasks/: SKILL.md
plugins/sdd/: CLAUDE.md
plugins/sdd/scripts/: sdd-util.sh  setup.sh
plugins/ssdd/: CLAUDE.md
plugins/ssdd/.claude-plugin/: plugin.json
plugins/ssdd/scripts/: setup.sh  ssdd-util.sh
scripts/: sdd-util.sh  setup.sh
skills/sdd-design/: SKILL.md
skills/sdd-implement/: SKILL.md
skills/sdd-plan/: SKILL.md
skills/sdd-tasks/: SKILL.md
src/sdd/: __init__.py  __main__.py  agent_context.py  approval_manager.py  config.py  design_manager.py  index_manager.py  plan_parser.py  promotion_manager.py  state.py  status_reporter.py  util_cli.py  workstream.py
src/ssdd/: __init__.py  __main__.py  approval_manager.py  config.py  design_manager.py  epic_manager.py  files_to_review.py  index_manager.py  plan_parser.py  promotion_manager.py  state.py  status_reporter.py  util_cli.py
tests/: conftest.py  test_agent_context.py  test_approval.py  test_design_domains.py  test_epic_manager.py  test_files_to_review.py  test_index_manager.py  test_plan_parser.py  test_promotion.py  test_state.py  test_state_new.py  test_status.py  test_util_cli.py  test_workstream.py
tests/fixtures/: sample_domain.md  sample_epic.md  sample_feature.md  sample_plan.yaml  sample_story.md  sample_story_002.md  sample_task.md  sample_theme.md  sample_work_story.md
(+61 files in other folders)
